somewhat fixed the two overlapping image

--- a/styles.css
+++ b/styles.css
@@ -39,33 +39,38 @@ ul{
   text-decoration: none;
   list-style-type: none;
   color: #828282;
-  font-size: 1.5vmin;
+  font-size: 20px;
 }
 #trac{
   padding-left: 4vmin;
   font-weight: bold;
-  font-size: 4vmin;
+  font-size: 50px;
 }
 
 .maincont{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0 5vmin;
+  position: relative;
 }
 
 .left{
   margin: 9vmin;
+  width: 30vmin;
 }
 #exp{
-  font-size: 4vmin;
+  font-size: 40px;
   line-height: 1em;
 }
 #anal{
-  font-size: 2vmin;
+  font-size: 23px;
   padding-bottom: -1vmin;
   color: #FA6797;
 }
 p{
   padding-top: 2vmin;
   width: 22vmin;
-  font-size: 1.4vmin;
+  font-size: px;
 }
 .button{
   padding-top: 5vmin;
@@ -76,8 +81,8 @@ p{
   grid-gap: 2vmin;
 }
 #str{
-  height: 4vmin;
-  width: 10vmin;
+  height: 45px;
+  width: 120px;
   display: inline-block;
   text-align: center;
   text-decoration: none;
@@ -87,11 +92,11 @@ p{
   padding: 0.5em 1em;
   color: #ffffff;
   background-color: #4B2BB7;
-  font-size: 1.2vmin;
+  font-size: 15px;
 }
 #demo{
-  height: 4vmin;
-  width: 8vmin;
+  height: 45px;
+  width: 120px;
   display: inline-block;
   text-align: center;
   text-decoration: none;
@@ -101,5 +106,22 @@ p{
   padding: 0.5em 1em;
   color: #4B2BB7;
   background-color: white;
-  font-size: 1.2vmin;
+  font-size: 15px;
+}
+
+img{
+  width: 80%;
+}
+.right{
+  display: grid;
+  grid-template-rows: 30px 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+#photo1{
+  grid-row: 3/5;
+  grid-column: 1 / 3;
+}
+#photo2{
+  grid-row: 2/4;
+  grid-column: 2 / 4;
 }
